<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_form_amount_plaintext"
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:text="@string/add_form_amount"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179" />

        <TextView
            android:id="@+id/add_income_top"
            android:layout_width="191dp"
            android:layout_height="33dp"
            android:text="@string/add_income_top"
            android:textAlignment="center"
            android:textColor="#040303"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.405"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <TextView
            android:id="@+id/type_amount"
            android:layout_width="86dp"
            android:layout_height="51dp"
            android:text="@string/type_amount"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.178" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="41dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toTopOf="@+id/add_form_amount_plaintext"
            app:layout_constraintEnd_toStartOf="@+id/add_income_top"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.398"
            app:srcCompat="@drawable/arrow_left" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/type_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.404"
            app:layout_constraintStart_toEndOf="@+id/add_income_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.405"
            app:srcCompat="@drawable/ic_baseline_check_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="41dp"
            android:layout_height="31dp"
            android:layout_marginTop="44dp"
            app:layout_constraintBottom_toTopOf="@+id/type_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_outline_close_24" />

        <TextView
            android:id="@+id/add_form_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_field1_label"
            android:textColor="#101010"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.298" />

        <TextView
            android:id="@+id/add_form_label2"
            android:layout_width="149dp"
            android:layout_height="25dp"
            android:text="@string/add_field2_label"
            android:textColor="#101010"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_form_label1"
            app:layout_constraintVertical_bias="0.061" />

        <TextView
            android:id="@+id/add_form_label3"
            android:layout_width="79dp"
            android:layout_height="25dp"
            android:text="@string/add_field_label3"
            android:textColor="#070707"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_form_label2"
            app:layout_constraintVertical_bias="0.088" />

        <EditText
            android:id="@+id/add_field_text1"
            android:layout_width="211dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_field_text1"
            android:textColor="#090808"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295" />

        <EditText
            android:id="@+id/add_field_text2"
            android:layout_width="211dp"
            android:layout_height="43dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_field_text2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_field_text1"
            app:layout_constraintVertical_bias="0.026" />

        <EditText
            android:id="@+id/add_field_twxt3"
            android:layout_width="216dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_field_text3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.977"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_field_text2"
            app:layout_constraintVertical_bias="0.048" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="216dp"
            android:backgroundTint="@color/teal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/add_field_twxt3"
            app:layout_constraintVertical_bias="0.172" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="212dp"
            android:text="@string/add_form_field4"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_form_label3"
            app:layout_constraintVertical_bias="0.227" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="64dp"
            android:layout_height="35dp"
            android:backgroundTint="@color/design_default_color_primary_variant"
            app:layout_constraintBottom_toBottomOf="@+id/add_field_text1"
            app:layout_constraintEnd_toEndOf="@+id/add_field_text1"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="@+id/add_field_text1"
            app:layout_constraintTop_toTopOf="@+id/add_field_text1"
            app:layout_constraintVertical_bias="0.347"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="64dp"
            android:layout_height="42dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_field_twxt3"
            app:layout_constraintEnd_toEndOf="@+id/add_field_twxt3"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toStartOf="@+id/add_field_twxt3"
            app:layout_constraintTop_toTopOf="@+id/add_field_twxt3"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>